UV Smart Project works wrong #82540

Closed
opened 2020-11-09 15:31:54 +01:00 by Tomasz Muszynski · 23 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-08 13:39, hash: 06dac0a453
Worked: (newest version of Blender that worked as expected)

Short description of error
[Please fill out a short description of the error here]

Smart UV unwrap does not react on UV seams

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

Use Smart UV unwrap with seams on some co-planar edges.

SmartUV-ProblemAGAIN.JPG

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.91.0 Beta, branch: master, commit date: 2020-11-08 13:39, hash: `06dac0a453` Worked: (newest version of Blender that worked as expected) **Short description of error** [Please fill out a short description of the error here] Smart UV unwrap does not react on UV seams **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] Use Smart UV unwrap with seams on some co-planar edges. ![SmartUV-ProblemAGAIN.JPG](https://archive.blender.org/developer/F9245605/SmartUV-ProblemAGAIN.JPG)

Added subscriber: @TomaszMuszynski

Added subscriber: @TomaszMuszynski
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Mind sharing an example file where this happens?

Mind sharing an example file where this happens?

Look at the attached image.
Those "pinkish" lines are seams. And they are completely ignored by smart_project .
Recently Devs have changed something in the smart_project operator cause it gives error when using parameters that are included in current offcial 2.90.1 API and no info in the Changelog that something has been developed recently ( with 2.91 version I have to use Radians instead Degrees ).
You can download my add-on ( sorry for the quality of the code inside it ) and see that I had to use other parameters (watched from the operator call in Bblender ) than are mentioned in official API.

https://github.com/muchasty/UV-Tools/blob/master/LightmapAutoUV.py

Look at the attached image. Those "pinkish" lines are seams. And they are completely ignored by smart_project . Recently Devs have changed something in the smart_project operator cause it gives error when using parameters that are included in current offcial 2.90.1 API and no info in the Changelog that something has been developed recently ( with 2.91 version I have to use Radians instead Degrees ). You can download my add-on ( sorry for the quality of the code inside it ) and see that I had to use other parameters (watched from the operator call in Bblender ) than are mentioned in official API. https://github.com/muchasty/UV-Tools/blob/master/LightmapAutoUV.py
Here is my project file: https://www.dropbox.com/s/2m7shajh2gy32ns/USA-Lazienka.rar?dl=0
Member

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'
Philipp Oeser self-assigned this 2020-11-09 18:17:54 +01:00
Member

Maybe I am misunderstanding, but Smart UV is not supposed to take Seams into account?
Instead, islands are defined by by Angle Limit?
https://docs.blender.org/manual/en/latest/modeling/meshes/editing/uv.html

So, if this was never working [which I think it wasnt], then this sounds more like a feature request than a bug.
Will have to close (but feel free to comment again if this was working at some point - or if this is a misunderstanding on my side)

Regarding the change between 2.90.1 and 2.91: smart UV was ported to C, see 850234c1b1
Since this is a different subject - having to use radians instead of degrees - than the original report though, I would kindly ask to report this separately [agree, this should be mentioned in the release logs]

Maybe I am misunderstanding, but Smart UV is not supposed to take Seams into account? Instead, islands are defined by by Angle Limit? https://docs.blender.org/manual/en/latest/modeling/meshes/editing/uv.html So, if this was never working [which I think it wasnt], then this sounds more like a feature request than a bug. Will have to close (but feel free to comment again if this was working at some point - or if this is a misunderstanding on my side) Regarding the change between 2.90.1 and 2.91: smart UV was ported to C, see 850234c1b1 Since this is a different subject - having to use radians instead of degrees - than the original report though, I would kindly ask to report this separately [agree, this should be mentioned in the release logs]

I am disappointed with that kind of bug filtering !

Please use 2.90.1 and you will see how the smart_project() should work !
Look at the attached image and find the difference ( this is from 2.90.1 with nicely cuts made by seams )
according to the previous image from 2.91Beta !

Przechwytywanie.JPG

I am disappointed with that kind of bug filtering ! Please use 2.90.1 and you will see how the smart_project() should work ! Look at the attached image and find the difference ( this is from 2.90.1 with nicely cuts made by seams ) according to the previous image from 2.91Beta ! ![Przechwytywanie.JPG](https://archive.blender.org/developer/F9248042/Przechwytywanie.JPG)
Member

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 05a2382c08

This issue was referenced by 05a2382c08402b250d6b5c4105b449f4474f6cf2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Sorry @TomaszMuszynski for getting that wrong and thx @ideasman42 for the fix!

Sorry @TomaszMuszynski for getting that wrong and thx @ideasman42 for the fix!

No problem. Let's go forward and do not look back. :)
I hope that it will be fixed soon cause it is crucial for me for making with my add-on well working lightmaps for UE4.

Thank you.

No problem. Let's go forward and do not look back. :) I hope that it will be fixed soon cause it is crucial for me for making with my add-on well working lightmaps for UE4. Thank you.
Member

In #82540#1051377, @TomaszMuszynski wrote:
I hope that it will be fixed soon cause it is crucial for me for making with my add-on well working lightmaps for UE4.

Well, fix is in, should be in tomorrows build from https://builder.blender.org/download/ (and will also be in 2.91 release)

> In #82540#1051377, @TomaszMuszynski wrote: > I hope that it will be fixed soon cause it is crucial for me for making with my add-on well working lightmaps for UE4. Well, fix is in, should be in tomorrows build from https://builder.blender.org/download/ (and will also be in 2.91 release)

THANK YOU !

THANK YOU !

What is going on?
Problem came back in release blender-2.91.0-e580c188533c-windows64

What is going on? Problem came back in release blender-2.91.0-e580c188533c-windows64
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

@ideasman42, looks like 9296ba8674 brought this back?

@ideasman42, looks like 9296ba8674 brought this back?

This issue was referenced by e01bf7a92e

This issue was referenced by e01bf7a92ecad3c64d0b1ae176f402d2638e246c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82540
No description provided.