Fix T82540: Smart UV project ignores seams

Functionality was lost in the Python to C conversion from
850234c1b10a828678f1b91001f2731db807f7e2